<resources>
    <string name="app_name">Logmo</string>
    <string name="logmo">Logmo</string>
    <string name="hello_user">Hello User!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="goal_title">Goal</string>
    <string name="statistic">Statistic</string>
    <string name="wishlist">Wishlist</string>
    <string name="tabunganku">Tabunganku:</string>
    <string name="rp_50_000_000_00">Rp.50.000.000.00</string>
    <string name="okt">OKT</string>
    <string name="pengeluaran">Pengeluaran</string>
    <string name="pemasukan">Pemasukan</string>
    <string name="konversi_uang">Konversi Uang</string>
    <string name="value_pemasukan">Rp. </string>
    <string name="user_name">Kelvin Pradiza</string>
    <string name="terkumpul">Terkumpul:</string>
    <string name="goal">Goal: </string>
    <string name="delete_all">Delete All</string>
    <string name="tambah">Tambah</string>
    <string name="hari_lagi">Hari Lagi</string>
    <string name="deadline">Deadline</string>
    <string name="logout">Logout</string>
    <string name="skip_for_now">Skip For Now</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_username_register">Masukkan Username</string>
    <string name="hint_register_pass">Masukkan Passsword</string>
    <string name="back_to_home">Back to Home</string>
    <string name="haveLogin">Login</string>
    <string name="have_an_account">Have an Account? <b>Login</b></string>
    <string name="don_t_have_an_account">Don\'t Have an Account? <b>Create an Account</b></string>
    <string name="submit">submit</string>
    <string name="hint_namabarang_register">Masukan Nama Barang</string>
    <string name="hint_harga_pass">Masukan Harga Barang</string>
    <string name="hint_deadline">Masukan Target Deadline</string>
    <string name="hint_nominal">Masukan Nominal</string>
    <string name="hint_keterangan">Masukan Keterangan</string>
    <string name="image_hint">click to add image</string>
    <string name="hapus">Hapus</string>

    <string name="detailGoal">Detail Goal</string>
    <string name="detailWishlist">Detail Wishlist</string>
    <string name="monthname">MonthName</string>
    <string name="list_wishlist">List Wishlist:</string>
    <string name="wishlistname">wishlistName</string>
    <string name="saran">Saran</string>
    <string name="please_wait">Please Wait</string>
</resources>