<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp">

    <TextView
        android:id="@+id/month_history"
        android:layout_width="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/black"
        android:textSize="14pt"
        android:text="@string/okt"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/text_pengeluaran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/red"
        android:textSize="5pt"
        android:layout_marginStart="16dp"
        android:text="@string/pengeluaran"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintStart_toEndOf="@id/month_history"/>

    <TextView
        android:id="@+id/value_pengeluaran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="end"
        android:textColor="@color/red"
        android:textSize="5pt"
        app:layout_constraintBottom_toBottomOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="- Rp.30.000.000" />

    <TextView
        android:id="@+id/text_pemasukan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/green"
        android:fontFamily="sans-serif-condensed"
        android:textSize="5pt"
        android:text="@string/pemasukan"
        app:layout_constraintStart_toStartOf="@id/text_pengeluaran"
        app:layout_constraintTop_toBottomOf="@id/guideline"/>

    <TextView
        android:id="@+id/value_pemasukan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="end"
        android:textColor="@color/green"
        android:textSize="5pt"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="+ Rp.30.000.000" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>