<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.statistic.AddStatistic">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:background="@color/royal_blue"
        android:paddingLeft="7dp"
        android:paddingTop="7dp"
        android:paddingRight="7dp"
        android:paddingBottom="7dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:paddingLeft="7dp"
            android:paddingTop="7dp"
            android:paddingRight="7dp"
            android:paddingBottom="7dp"
            android:layout_height="68dp">

            <TextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/statistic"
                android:textColor="@color/white"
                android:textSize="14pt" />
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nominal_tl"
        style="@style/inputLayout_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/hint_nominal"
        android:textColorHint="@color/gray"
        app:boxStrokeColor="@color/royal_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nominal_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:lines="1"
            android:maxLines="1"
            android:inputType="number"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/keterangan_tl"
        style="@style/inputLayout_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/hint_keterangan"
        android:fontFamily="sans-serif-condensed"
        app:boxStrokeColor="@color/royal_blue"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nominal_tl">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/keterangan_editText"
            android:maxLines="1"
            android:lines="1"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-condensed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/jenismasukan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keterangan_tl">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:paddingHorizontal="16dp"
            android:background="@drawable/radio_selector"
            android:button="@drawable/null_radio_button"
            android:elevation="4dp"
            android:gravity="center"
            android:textColor="@drawable/radio_text_selector"
            android:text="Pemasukan"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:paddingHorizontal="16dp"
            android:background="@drawable/radio_selector"
            android:button="@drawable/null_radio_button"
            android:elevation="4dp"
            android:gravity="center"
            android:textColor="@drawable/radio_text_selector"
            android:text="Pengeluaran"/>
    </RadioGroup>

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/jenismasukan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>